sort.pancake.lessons.sort.pancake.CohenPancake.scala.error
CohenPancake:4: error: type mismatch;
 found   : Int(1)
 required: Boolean
  debug = 1
          ^CohenPancake:10: error: type mismatch;
 found   : Int(0)
 required: Boolean
			if (debug>0)
                                  ^CohenPancake:29: error: type mismatch;
 found   : Int(0)
 required: Boolean
				if (debug > 0) 
                                            ^CohenPancake:36: error: type mismatch;
 found   : Int(0)
 required: Boolean
					if (debug > 0) 
                                                    ^CohenPancake:46: error: type mismatch;
 found   : Int(0)
 required: Boolean
						if (debug > 0) 
                                                            ^CohenPancake:51: error: type mismatch;
 found   : Int(0)
 required: Boolean
						if (debug > 0) 
                                                            ^CohenPancake:64: error: type mismatch;
 found   : Int(0)
 required: Boolean
					if (debug > 0) 
                                                    ^CohenPancake:83: error: type mismatch;
 found   : Int(0)
 required: Boolean
							if (debug > 0) 
                                                                    ^